# fpinscala-ocaml

./: README.md  candyMachine.ml  ch10_monoid.ml  ch6_candyMachine.ml  ch6_state.ml  dune  dune-project  monoid.ml  wc.ml
lib/: dune
test/: dune
