(env
  (dev
    (flags (:standard -w -50 -w -32 -w -27))))

(executables
 (names ch6_candyMachine)
 (modules monad ch6_candyMachine))

(executables
 (names ch6_state)
 (modules ch6_state))

(executables
 (names ch10_monoid)
 (modules ch10_monoid))

; (executables
;  (names wc)
;  (modules monoid wc)
;  (libraries stdio base))